--- a/deleruleta/package.json
+++ b/deleruleta/package.json
@@ -20,5 +20,8 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"flowbite-svelte": "^0.47.2"
 	}
 }
