--- a/coordinadores/package.json
+++ b/coordinadores/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "coordinadores",
+	"name": "deleruleta",
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
@@ -8,14 +8,24 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
+    },
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"flowbite-svelte-icons": "^2.0.2",
+		"postcss": "^8.4.47",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
+		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@types/d3": "^7.4.3",
+		"d3": "^7.9.0",
+		"easing": "^1.2.1",
+		"flowbite-svelte": "^0.47.2"
 	}
 }
